<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/ToolBarTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Relax"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".PanicAttack">

            <TextView
                android:id="@+id/number"
                android:layout_width="151dp"
                android:layout_height="151dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#A33D4856"
                android:textSize="100sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <Button
                android:id="@+id/counter"
                android:layout_width="272dp"
                android:layout_height="77dp"
                android:layout_marginTop="40dp"
                android:background="@color/colorAccent"
                android:fontFamily="cursive"
                android:text="@string/click_me_every_time_you_breathe"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/one_helpful_method_for_stopping_a_panic_attack_is_deep_breathing_however_in_the_moment_this_can_be_very_hard_and_it_can_be_difficult_to_keep_track_of_the_amount_of_times_you_breathe_when_you_feel_a_panic_attack_coming_use_this_counter_to_keep_track_of_your_breaths_and_look_at_geoff_s_face_to_help_you_relax"
                android:textColor="#A33D4856"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:paddingRight="220dp"
        app:contentInsetStart="0dp"
        app:fabAlignmentMode="end"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>